# RABET

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CITATION.cff  LICENSE  README.md  README.txt  build_mac_optimized.py  build_packaging_common.py  build_windows_optimized.py  bump_version.py  defaults.py  environment.yml  index.html  mac_build.txt  main.py  mkdocs.yml  pyproject.toml  requirements-docs.txt  sitemap.xml
.github/workflows/: build-mac-optimized.yml  build-mac.yml  ci.yml  docs.yml  main.yml  release.yml
BUILD_MACOS_LINUX/: index.html
CSV_FORMAT/: index.html
RABET/: main.py
RABET/controllers/: analysis_controller.py  annotation_controller.py  app_controller.py  project_controller.py  video_controller.py
RABET/models/: action_map_model.py  analysis_model.py  project_model.py  video_model.py
RABET/utils/: config_manager.py  directory_init.py  file_manager.py  theme_manager.py
RABET/views/: analysis_view.py  main_window.py  project_view.py  recording_control_view.py  video_player_view.py
USER_GUIDE/: index.html
configs/: custom_color_map.json  default_action_map.json  default_metrics.json
controllers/: action_map_controller.py  analysis_controller.py  annotation_controller.py  app_controller.py  project_controller.py  reliability_controller.py  video_controller.py  visualization_controller.py
docs/: BUG_AUDIT_REPORT.ja.md  BUILD_MACOS_LINUX.ja.md  BUILD_MACOS_LINUX.md  CSV_FORMAT.ja.md  CSV_FORMAT.md  NEXT_TASKS.ja.md  PERFORMANCE_OPTIMIZATION_PLAN.ja.md  PROJECT_SCHEMA_V2_DESIGN.ja.md  README.md  STARTUP_OPTIMIZATION_PLAN.ja.md  USER_GUIDE.ja.md  USER_GUIDE.md  VIDEO_WORKER_DESIGN.ja.md  index.ja.md  index.md
docs/assets/: RABET_logo.xlsx
docs/reliability/: README.ja.md  README.md  compute_agreement.R
ja/: index.html
ja/BUG_AUDIT_REPORT/: index.html
ja/BUILD_MACOS_LINUX/: index.html
ja/CSV_FORMAT/: index.html
ja/NEXT_TASKS/: index.html
ja/PERFORMANCE_OPTIMIZATION_PLAN/: index.html
ja/PROJECT_SCHEMA_V2_DESIGN/: index.html
ja/USER_GUIDE/: index.html
models/: action_map_model.py  analysis_config.py  analysis_model.py  annotation_model.py  bout_analysis.py  project_model.py  reliability_model.py  sequence_analysis.py  video_model.py
packaging/: RABET.iss  README.md  build_linux_appimage.sh  build_linux_optimized.py  build_macos_dmg.sh  build_macos_optimized.py  build_packaging_common.py  build_windows_optimized.py
reliability/: index.html
resources/: RABET.icns
scripts/: README.md  bump_version.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_action_map_model.py  test_analysis_config.py  test_analysis_model.py  test_annotation_controller.py  test_annotation_model.py  test_bout_analysis.py  test_bout_analysis_integration.py  test_close_guard.py  test_config_manager.py  test_config_path_manager.py  test_content_hash.py  test_csv_compat.py  test_csv_safety.py  test_file_manager_atomic.py  test_imports.py  test_lazy_tabs.py  test_main_window_keys.py  test_perf.py  test_project_model.py  test_project_relink.py  test_project_relink_ui.py  test_project_schema_v2.py  test_project_video_id_stability.py  test_reliability_disagreement_review.py  test_reliability_model.py  test_reliability_near_neighbor.py  test_sequence_analysis.py  test_startup_import.py  test_startup_profiler.py  test_tier12_dialogs.py  test_timeline_culling.py  test_transition_integration.py  test_version.py  test_video_controller_step.py  test_video_facade.py  test_video_model_mocked.py  test_visualization_debounce.py  test_visualization_file_click.py  test_visualization_linecollection.py
tools/: check_env.py  check_pe_imports.py  check_qa_fixtures.py  generate_reliability_qa_data.py  probe_pingouin_imports.py
utils/: annotation_csv_parser.py  app_icon.py  auto_close_message.py  config_manager.py  config_path_manager.py  content_hash.py  csv_safety.py  directory_init.py  figure_export.py  file_manager.py  in_memory_log_handler.py  layout_diagnostics.py  loading_overlay.py  log_manager.py  logger.py  phase_loading_overlay.py  rabet_logo_cells.py  startup_profiler.py  theme_manager.py  threaded_loader.py  video_detection.py
views/: about_dialog.py  action_map_view.py  analysis_charts.py  analysis_view.py  bout_analysis_dialog.py  bout_raster_dialog.py  disagreement_review_view.py  log_viewer_dialog.py  main_window.py  metrics_config_dialog.py  predictability_dialog.py  project_view.py  recording_control_view.py  reliability_view.py  shortcuts_dialog.py  timeline_view.py  transition_analysis_dialog.py  video_player_view.py  visualization_view.py  viz_delegates.py
(+11 files in other folders)
